--- a/administracion.html
+++ b/administracion.html
@@ -4,33 +4,21 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/administracion.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/administracion.css">
   <title>Hospital Dr. Ricardo Gutierrez - Administración</title>
 </head>
 
 <body>
-  <a href='index.html'> Inicio </a> | <a href='#'> Paciente </a> 
+  <nav> <a href="index.html">Inicio</a> <a href="#Paciente">Paciente</a>
     <div class="search-container">
-      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> 
-      <button> Buscar </button> 
-      <a href="login.html"> Login</a>        </form>
-    </div>
-  </div>
-
-
-  <div class="dropdown"> 
-      <button class="dropbtn">Administración&darr;</button>
-        <div class="dropdown-content"> 
-          <a href="#">Usuarios</a> 
-          <a href="#Roles">Roles</a> 
-          <a href="#Permisos">Permisos</a> 
-        </div>
+      <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
+        <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
       </div>
-
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
+    </div>
+  </nav>
   <hr>
-
-  
   <footer class="bottom-page-footer">
     <hr>
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
@@ -39,13 +27,3 @@
 </body>
 
 </html>
-
-<!--
-  <div class="search-container">
-      <form action="#"> 
-        <input type="search" placeholder="Buscar.." name="busqueda"> 
-        <button> Buscar </button> 
-        <a href="login.html"> Login</a>        
-      </form>
-  </div>
-  -->
