--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
  <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
     <div class="search-container">
-      <form action="#" id="searchform"> 
-          <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda"> 
-           <button type= "submit" id='btnSubmit'> Buscar </button> 
-           <a href="login.html" class='link1'> LOGIN </a>   
+      <form action="#" id="searchform">
+          <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
+           <button type= "submit" id='btnSubmit'> Buscar </button>
+           <a href="login.html" class='link1'> LOGIN </a>
       </form>
- 
+
     </div>
   </nav>
   <hr class= "separatingStripe">
@@ -26,34 +26,34 @@
      <h3 class="label-text-header"> <span class="text1">El Hospital</span> </h3>
       <p> Este centro de salud tiene un programa de residencias de primer nivel en el pais. Se ofrecen oportunidades
         de prática intensiva y supervisada en ámbitos profesionales y por la misma -por supuesto- se recibe un
-        salario mensual, acorde a lo que la regulación médica profesional lo indica en cada momento.</p> 
-         <div class='btnMoreInfo'> 
+        salario mensual, acorde a lo que la regulación médica profesional lo indica en cada momento.</p>
+         <div class='btnMoreInfo'>
             <a href="#" class="moreInfo"> Más info >></a>
-         </div>  
-        
+         </div>
+
     </div>
     <div class="label-text">
-            <h3 class="label-text-header"> 
-         <span class="text1"> Guardias</span> 
+            <h3 class="label-text-header">
+         <span class="text1"> Guardias</span>
       </h3>
       <p> Hospital Dr.Ricardo Gutierrez de La Plata dispone de un sotisfado servicio de guardias médicas las 24 horas
         para la atención de distintas urgencias. La administración de la institución hace viable una eficiente
         separación de los pacientes según el nivel de seriedad y tipo de patología. </p>
-         <div class='btnMoreInfo'> 
+         <div class='btnMoreInfo'>
             <a href="#" class="moreInfo"> Más info >></a>
-         </div>  
+         </div>
     </div>
     <div class="label-text">
-            <h3 class="label-text-header"> 
-         <span class="text1"> Especialidades</span> 
+            <h3 class="label-text-header">
+         <span class="text1"> Especialidades</span>
       </h3>
       <p> Acorde a una respetable trayectoria en materia de medicina y salud, en Hospital Dr.Ricardo Gutierrez de la
         Plata podemos encontrar profesionales de las principales especialidades de salud. Del mismo modo, se brinda
         atención programada y de urgencias, se realizan estudios médicos y se brinda soporte en muchas de las ramas
         comunes de la medicina moderna.. </p>
-         <div class='btnMoreInfo'> 
+         <div class='btnMoreInfo'>
             <a href="#" class="moreInfo"> Más info >></a>
-         </div>  
+         </div>
     </div>
   </div>
   <footer class="index-bottom-page-footer">
